[gd_scene load_steps=10 format=2]

[ext_resource path="res://actors/Actor.gd" type="Script" id=1]
[ext_resource path="res://controller/StateController.gd" type="Script" id=2]
[ext_resource path="res://actors/Hitbox.gd" type="Script" id=3]
[ext_resource path="res://actors/ActorSprite.gd" type="Script" id=4]
[ext_resource path="res://actors/ActorSFX.gd" type="Script" id=5]
[ext_resource path="res://sounds/Super Punch MMA-SoundBible.com.wav" type="AudioStream" id=6]
[ext_resource path="res://actors/Hurtbox.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.3126, 14.4537 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 41.1252, 91.6566 )

[node name="Actor" type="KinematicBody2D" groups=[
"actors",
]]
script = ExtResource( 1 )

[node name="Focus" type="Node2D" parent="."]
position = Vector2( 0, -92 )

[node name="ActorSprite" type="AnimatedSprite" parent="Focus"]
script = ExtResource( 4 )

[node name="Hitboxes" type="Node2D" parent="Focus"]

[node name="Hitbox" type="Area2D" parent="Focus/Hitboxes" groups=[
"hitboxes",
]]
modulate = Color( 0.615686, 0.141176, 0.827451, 1 )
position = Vector2( 121.272, -68.9026 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Focus/Hitboxes/Hitbox"]
shape = SubResource( 1 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="Hurtboxes" type="Node2D" parent="Focus"]

[node name="Hurtbox" type="Area2D" parent="Focus/Hurtboxes" groups=[
"hurtboxes",
]]
modulate = Color( 0.968627, 1, 0, 1 )
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Focus/Hurtboxes/Hurtbox"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Pushbox" type="CollisionShape2D" parent="."]
rotation = 1.5708

[node name="AudioStreams" type="Node2D" parent="."]

[node name="Voice" type="AudioStreamPlayer2D" parent="AudioStreams"]

[node name="ActorSFX" type="AudioStreamPlayer2D" parent="AudioStreams"]
script = ExtResource( 5 )
hitStream = ExtResource( 6 )

[node name="StateController" type="Node" parent="."]
script = ExtResource( 2 )
actorPath = NodePath("..")
[connection signal="area_entered" from="Focus/Hurtboxes/Hurtbox" to="StateController" method="handleHurtboxEntered"]
[connection signal="hit" from="StateController" to="AudioStreams/ActorSFX" method="handleHit"]
